--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,18 @@
 body, .window {
-  background-color: #555fff;
+  background-color: #999fff;
+  margin: 0 20%;
 }
 button:focus, .column:focus {
   outline: none;
+}
+.game {
+  
+}
+.board-container {
+
+}
+.status {
+  margin-bottom: 20px;
 }
 .board, .column, .slot, .window{
   background-color: #fff555;
@@ -56,7 +66,7 @@ button:focus, .column:focus {
   margin-left: 10px;
   box-shadow: 5px;
   background-image: radial-gradient(farthest-corner at -70px -40px,
-      #000 0%, #666fff 100%);
+      #000 0%, #aaafff 100%);
 }
 
 /*.window:hover{
