--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 body, .window {
   background-color: #999fff;
-  margin: 0 20%;
+  font: 18pt sans-serif;
+  color: #393939;
 }
 button:focus, .column:focus {
   outline: none;
@@ -8,11 +9,25 @@ button:focus, .column:focus {
 .game {
   
 }
-.board-container {
-
+.title {
+  font-size: 60px;
+  margin-top: 20px;
+  text-shadow: 2px 1px 2px #558ABB;
+}
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 .status {
+  background-color: #cccfff;
+  border: 2px solid #55a;
+  border-radius: 20px;
+  padding: 5px 10px;
+  width: 300px;
   margin-bottom: 20px;
+  text-shadow: 1px 1px 1px #aaa;
 }
 .board, .column, .slot, .window{
   background-color: #fff555;
