--- a/src/index.css
+++ b/src/index.css
@@ -10,10 +10,11 @@ button:focus {
 
 }
 .button {
-  border: 2px solid #00ace0;
+  border: 2px solid #ace999;
   border-radius: 7px;
-  background: #000ace;
-  color: white;
+  background: #ace000;
+  color: #393939;
+  font-weight: bold;
   margin-bottom: 20px;
   padding: 5px 10px 7px 10px;
 }
