--- a/src/index.css
+++ b/src/index.css
@@ -6,17 +6,25 @@ body, .window {
 button:focus {
   outline: none;
 }
+button:hover {
+  cursor: pointer;
+}
 .game {
 
 }
 .button {
-  border: 2px solid #ace999;
+  border: 1px solid #050;
   border-radius: 7px;
-  background: #ace000;
-  color: #393939;
+  background: linear-gradient(to bottom, #0b0, #090, #070);
+  box-shadow: 0px .5px 1px #333;
+  color: #fff;
   font-weight: bold;
+  text-shadow: 1px 1px 1px #030;
   margin-bottom: 20px;
   padding: 5px 10px 7px 10px;
+}
+.button:active {
+  background: #080;
 }
 .title {
   font-size: 60px;
@@ -79,7 +87,6 @@ button:focus {
   text-align: center;
   align-content: center;
   clear: left;
-  cursor: pointer;
 }
 
 .window {
