--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@ body, .window {
   background-color: #999ace;
   font: 18pt sans-serif;
   color: #393939;
+  width: 100%;
 }
 button:focus {
   outline: none;
@@ -9,8 +10,18 @@ button:focus {
 button:hover {
   cursor: pointer;
 }
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 .game {
-
+  background-color: #cccfff;
+  border: 2px solid #55a;
+  border-radius: 20px;
+  padding: 5px 10px;
+  margin-bottom: 10px;
 }
 .button {
   border: 1px solid #050;
@@ -20,30 +31,26 @@ button:hover {
   color: #fff;
   font-weight: bold;
   text-shadow: 1px 1px 1px #030;
-  margin-bottom: 20px;
   padding: 5px 10px 7px 10px;
+  margin: 5px 10px;
 }
 .button:active {
   background: #080;
 }
+.buttons {
+  flex-direction: row;
+  justify-content: space-evenly;
+  background: none;
+  border: none;
+}
 .title {
   font-size: 60px;
-  margin-top: 20px;
+  margin-top: 10px;
+  margin-bottom: 30px;
   text-shadow: 2px 1px 2px #558ABB;
 }
-.container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
 .status {
-  background-color: #cccfff;
-  border: 2px solid #55a;
-  border-radius: 20px;
-  padding: 5px 10px;
   width: 300px;
-  margin-bottom: 20px;
   text-shadow: 1px 1px 1px #aaa;
 }
 .board, .column, .slot, .window{
@@ -55,6 +62,7 @@ button:hover {
   width: 500px;
   padding:20px;
   clear: both;
+  margin: 10px;
 }
 
 .column {
@@ -92,15 +100,33 @@ button:hover {
   box-shadow: 5px;
   background: radial-gradient(farthest-corner at -70px -40px, #000 0%, #aaafff 100%);
 }
+
+/* --- Panel --- */
+.panels {
+  flex-direction: row;
+  width: 100%;
+  justify-content: space-evenly;
+  margin: 20px 10px 30px 10px;
+}
+.panel {
+  background: #987;
+  border: 5px solid #543;
+  border-radius: 15px;
+  width: 125px;
+  height: 150px;
+  justify-content: space-evenly;
+}
+
 /* --- Palette --- */
 .palette {
-  background: #765;
+  background: #987;
+  border: 5px solid #543;
+  border-radius: 15px;
   width: 600px;
   height: 100px;
-  padding: 5px 20px;
+  padding: 0 20px;
   flex-direction: row;
   justify-content: space-between;
-  border: 5px solid #543;
 }
 
 
